# coreutils-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: chunks.rs  executor.rs  io.rs  lib.rs  sponge.rs  tee.rs  util.rs
