[package]
name = "coreutils"
version = "0.1.0"
authors = ["Otto <otto@ot-to.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
lto = true

[[bin]]
path = "src/sponge.rs"
name = "sponge"

[[bin]]
path = "src/tee.rs"
name = "tee"
