[package]
name = "coreutils"
version = "0.1.0"
authors = ["Otto <otto@ot-to.nl>"]
edition = "2018"

[dependencies]
indicatif = "0.14.0"
ctrlc = "3.1.4"
termion = "1.5.5"
memmap = "0.7.0"
regex = "1"
tempfile = "3.1.0"
num_cpus = "1.13.0"

[dependencies.pnet]
version = "0.27.2"
default-features = false

[dependencies.clap]
version = "2.33.0"
default-features = false

[profile.release]
panic = "abort"
#lto = true
